# ForgeFlow

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  SECURITY.en.md  SECURITY.md  llm_config.example.json  main.py  pyproject.toml
agents/: README.md  __init__.py  base.py  implementation_engineer.py  orchestrator.py  requirements_engineer.py  solution_engineer.py  state_manager.py  system_designer.py  test_validation_engineer.py
docs/: CHANGELOG.md  README.en.md  README.md  agent_design_principles.md  branch-boundaries.md  git-workflow.md  implementation-governance.md  orchestrator_implementation_notes.md  profile-runtime.md  roadmap.md  runtime-events.md  runtime-status.md  runtime-theory.en.md  runtime-theory.md  runtime-v0-architecture.md  runtime-v0.2-walkthrough.md  runtime-v0.md  state_contracts.md  workflow_backflow_rules.md  workflow_criteria.md  workflow_scope.md  workflow_stage_criteria.md
forgeflow/: __init__.py
llm/: __init__.py  api.py  llm_caller.py
schemas/: README.md  __init__.py  common.py  design.py  implementation.py  llm_trace.py  question_state.py  registry.py  run_summary.py  solution.py  spec.py  testing.py
scripts/: branch_path_guard.sh
sieves/: requirement_clarifier.py  requirement_specifier.py
src/: main.rs
state/: README.md  implementation_status.json  question_state.json  solution.json  spec.json  system_design.json  test_report.json
tui/: README.md  app.py  commands.py  event_stream.py  screens.py  widgets.py
(+268 files in other folders)
