[package]
name = "forgeflow"
version = "0.1.0"
edition = "2024"
authors = ["ningaloha"]
description = "ForgeFlow rewritten in Rust"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"